<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/data_container_weather"
    android:background="@drawable/bg_screen"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.weather_screen.WeatherFragment">

    <TextView
        android:id="@+id/tv_error_current_weather"
        style="@style/settings_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_msg"
        android:padding="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_loading_current_weather"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_data_current_weather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_degree_current_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:text="@string/fragment_weather_current_temp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="45sp"
                />
            <TextView
                android:id="@+id/tv_weather_description_current_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/fragment_weather_current_description"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_humidity_current_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/fragment_weather_current_humidity"/>

            <TextView
                android:id="@+id/tv_wind_speed_current_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/fragment_weather_current_wind" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/settings_main"
                android:orientation="horizontal"
                android:padding="5dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tv_city_name_current_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/fragment_weather_current_cityname"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/img_weather_pictures_current_weather"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="35dp"
                    android:src="@drawable/ic_baseline_cloud_queue_24"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/hourly_cl_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_error_hourly_weather"
                    style="@style/settings_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_msg_hourly"
                    android:padding="15dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/pb_loading_hourly_weather"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourly_recycler_view_weather"
                    style="@style/settings_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/hourly_weather_item"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/daily_cl_weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tv_error_daily_weather"
                    style="@style/settings_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_msg_daily"
                    android:padding="15dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/pb_loading_daily_weather"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <HorizontalScrollView
                    android:id="@+id/scrollview_daily_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:measureAllChildren="false"
                    android:scrollbars="none"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:id="@+id/daily_ll_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/settings_main"
                        android:orientation="horizontal"
                        tools:ignore="MissingConstraints">

                        <include
                            android:id="@+id/include_daily_item_1"
                            layout="@layout/daily_item"/>

                        <include
                            android:id="@+id/include_daily_item_2"
                            layout="@layout/daily_item"/>

                        <include
                            android:id="@+id/include_daily_item_3"
                            layout="@layout/daily_item"/>

                        <include
                            android:id="@+id/include_daily_item_4"
                            layout="@layout/daily_item"/>

                    </LinearLayout>

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>